full reg & locale

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -30,6 +30,16 @@ ru:
     messages:
       already_in_use: "уже используется"
   devise:
+    failure:
+        already_authenticated: "Вы уже вошли в систему."
+        inactive: "Ваша учётная запись ещё не активирована."
+        invalid: "Неверный адрес email или пароль."
+        invalid_token: "Неверный ключ аутентификации."
+        locked: "Ваша учётная запись заблокирована."
+        not_found_in_database: "Неверный пароль или email."
+        timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
+        unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
+        unconfirmed: "Вы должны подтвердить вашу учётную запись."
     mailer:
       confirmation_instructions:
         subject: "Инструкции подтверждения"
@@ -46,5 +56,6 @@ ru:
         account_lock_msg: "Ваш аккаунт был заблокирован из-за чрезмерного количества неудачных попыток входа."
         unlock_link_msg: "Нажмите на ссылку ниже, чтобы разблокировать свой аккаунт:"
         unlock_link: "Разблокировать мою учетную запись"
+
   hello: "Здравствуйте"
   welcome: "Добро пожаловать"
