--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -44,13 +44,18 @@ ru:
       confirmation_instructions:
         subject: "Инструкции подтверждения"
         confirm_link_msg: "Вы можете подтвердить ваш адрес электронной почты через ссылку ниже :"
+        sucsess_registration_msg: "Поздравляем Вас, вы успешно зарегистрировали аккаунт в программе 'Афиша Здоровья' на ваш адрес электронной почты. С помощью него Вы можете восстановить пароль."
+        ignore_registration_msg: "В случае, если вы этого не делали - восстановите пароль самостоятельно и начните пользоваться нашим приложением."
         confirm_account_link: "Подтвердить свою учетную запись"
       reset_password_instructions:
         subject: "Инструкции для восстановления пароля"
-        request_reset_link_msg: "Кто-то запросил ссылку на изменение пароля. Вы можете сделать это через ссылку ниже."
+        request_reset_link_msg: "Кто-то запросил ссылку на изменение пароля."
+        restore_password: "Ваш новый пароль:"
         password_change_link: "Изменить пароль"
         ignore_mail_msg: "Если Вы не запрашивали это, Вы можете проигнорировать это письмо." 
         no_changes_msg: "Ваш пароль не изменится, пока вы не откроете ссылку выше и не создадите новый пароль."
+        changes_msg: "Если Вы не запрашивали этого, значит у кого-то есть доступ к вашему аккаунту. "
+        secure_changes_msg: "Для безопасности Ваш пароль уже изменен на данный."
       unlock_instructions:
         subject: "Разблокировать Инструкции"
         account_lock_msg: "Ваш аккаунт был заблокирован из-за чрезмерного количества неудачных попыток входа."
@@ -59,3 +64,6 @@ ru:
 
   hello: "Здравствуйте"
   welcome: "Добро пожаловать"
+  sucsess_registration_msg: "Поздравляем Вас, вы успешно зарегистрировали аккаунт в программе 'Афиша Здоровья' на Ваш адрес электронной почты. С помощью него Вы можете восстановить пароль."
+  ignore_registration_msg: "В случае, если вы этого не делали - восстановите пароль самостоятельно и начните пользоваться нашим приложением."
+        
