--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -66,4 +66,7 @@ ru:
   welcome: "Добро пожаловать"
   sucsess_registration_msg: "Поздравляем Вас, вы успешно зарегистрировали аккаунт в программе 'Афиша Здоровья' на Ваш адрес электронной почты. С помощью него Вы можете восстановить пароль."
   ignore_registration_msg: "В случае, если вы этого не делали - восстановите пароль самостоятельно и начните пользоваться нашим приложением."
-        
+  changes_msg: "Если Вы не запрашивали этого, значит у кого-то есть доступ к вашему аккаунту. "
+  secure_changes_msg: "Для безопасности Ваш пароль уже изменен на данный."
+  restore_password: "Ваш новый пароль:"
+  request_reset_link_msg: "Кто-то запросил ссылку на изменение пароля."
